<resources>
    <string name="app_name">Chatterbox</string>

    <!-- Icons -->
    <string name="fa_user">&#xf007;</string>
    <string name="fa_retailer">&#xf07a;</string>
    <string name="fa_cart">&#xf07a;</string>

    <string name="welcome_text">Chatterbox</string>
    <string name="full_name_text">Full Name</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="login_btn_text">Log In</string>
    <string name="or_text">OR</string>

    <!-- Facebook Login details -->
    <string name="facebook_app_id">"Your Facebook App id"</string>
    <string name="fb_login_protocol_scheme">"Your Facebook protocol scheme"</string>

    <!-- Phone Number Authentication -->
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="google_signin_text">Sign in with Google</string>
    <string name="phone_number_sign_in_text">Sign in using Phone Number</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_register">New Chatterbox? Register here</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="hint_email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_change">Change</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_back">Back</string>
    <string name="hint_password">Password</string>
    <string name="register_text">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="app_logo">App Logo</string>
    <string name="business_type_text">Choose Your Business Type</string>
    <string name="enter_location_text">Enter Location</string>
    <string name="shop_name_text">Shop Name</string>
    <string name="add_description_text">Add description</string>
    <string name="details_text">Details:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="discard_text">Discard</string>
    <string name="owner_name_text">Owner Name</string>
    <string name="owner_ph_no_text">Owner Phone Number</string>
    <string name="upload_image_text">Upload an image</string>
    <string name="cart_text">Cart</string>
    <string name="search_text">Search</string>
    <string name="location_text">Location</string>
    <string name="create_shop_text">Create Shop</string>
    <string name="add_cart_text">Add to Cart</string>
    <string name="change_email_text">Change Email</string>
    <string name="change_password_text">Change Password</string>
    <string name="send_password_reset_email_text">Send Password Reset Email</string>
    <string name="remove_user_text">Remove User</string>
    <string name="new_password_text">New Password</string>
    <string name="new_email_text">New Email</string>
    <string name="change_role_text">Change Role</string>
    <string name="show_cart_text">Show Cart</string>
    <string name="settings_text">Settings</string>
    <string name="post_paid_ad_text">Post paid ad</string>
    <string name="message_text">Message</string>
    <string name="username_text">Username</string>
    <string name="action_settings">Settings</string>
    <string name="send_text">Send</string>

</resources>
